--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Huggepugge1/BrainySwipe#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "io": "^1.3.2",
     "json": "^11.0.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
     "sass": "^1.62.0",
     "socket.io": "^4.6.1"
